more general updates

--- a/game.html
+++ b/game.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-    <header>
-        <h1> TITLE OF MY TEXT ADVENTURE </h1>
+    <header> 
+        <h1> TEXT ADVENTURE 2: ELECTRIC BOOGALOO </h1>
     </header>
 
     <main id="game">
