pickup function lookin' swell

--- a/game.html
+++ b/game.html
@@ -31,7 +31,7 @@
 
     <aside id="inventory">
         <h1> Inventory </h1>
-        <ul>
+        <ul id="inventoryList">
         </ul>
     </aside>
 
@@ -42,7 +42,7 @@
     </aside>
 
     <footer>
-        Copyright (c) 2014 YOUR NAME HERE. All rights reserved.
+        Copyright (c) Antonio DelVecchio. All rights reserved.
     </footer>
 
 </body>
