--- a/game.html
+++ b/game.html
@@ -40,7 +40,15 @@
         <ul>
         	<li id="pickup">pickup</li>
         	<li id="drop">drop</li>
+        	<li id="use">use</li>
         </ul>
+    </aside>
+    
+    <aside id="location">
+    	<h1> Current Location </h1>
+    		<ul>
+    			<li id="currLoc"></li>
+    		</ul>
     </aside>
 
     <footer>
