--- a/game.html
+++ b/game.html
@@ -5,8 +5,10 @@
     <title> Text Adventure Game </title>
     <meta charset="UTF-8"/>
     <link href="game.css" rel="stylesheet" />
-    <script src="game.js"></script>
-
+    <script src="game.js" type="text/javascript"></script>
+    <script src="items.js" type="text/javascript"></script>
+    <script src="locations2.js" type="text/javascript"></script>
+    
 </head>
 <body>
 
@@ -41,10 +43,11 @@
         	<li id="pickup">pickup</li>
         	<li id="drop">drop</li>
         	<li id="use">use</li>
+        	<li id="progress">progress</li>
         </ul>
     </aside>
     
-    <aside id="location">
+    <aside id="locationBar">
     	<h1> Current Location </h1>
     		<ul>
     			<li id="currLoc"></li>
