--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@
     
         <output id="scene">
             <textarea id="descrip" rows="6" cols="35" style="text-align:center; font-size:100%; font-family: cursive" readonly>
-            	You awaken to find yourself lying on the floor of a dark room. There is a large piece of paper lying next to you.
+            	Enter "progress" to start the game.
             </textarea>
             <label for="action"> What will you do? </label>
         </output>
