completely finished. This time for sure.

--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@
     
         <output id="scene">
             <textarea id="descrip" rows="6" cols="35" style="text-align:center; font-size:100%; font-family: cursive" readonly>
-            	Enter "progress" to start the game.
+            	Enter your name by saying "mynameis" and then your first name.
             </textarea>
             <label for="action"> What will you do? </label>
         </output>
@@ -55,6 +55,13 @@
     			<li id="currLoc"></li>
     		</ul>
     </aside>
+    
+    <aside id="namearea">
+    	<h1>Character</h1>
+    		<ul>
+    			<li id="playername"></li>
+    		</ul>
+    	</aside>
 
     <footer>
         Copyright (c) Antonio DelVecchio. All rights reserved.
